# linux_cmake_demo

./: CMakeLists.txt
inc/hello/: hello.h
inc/hi/: hi.h
my_lib/: CMakeLists.txt  nihao.c  nihao.h
src/: CMakeLists.txt  main.c
src/hello/: hello.c
src/hi/: hi.c
